--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,3 +1,8 @@
 @main("Bar Crawl App") {
+    <div id="bar-crawl-map">
+    </div>
 
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false">
+    </script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
 }
