--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,7 +6,12 @@
     <head>
         <title>@title</title>
         <url rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=9" >
+        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+        <link rel="stylesheet" href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
+        <script type="text/javascript" src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))"></script>
     </head>
     <body>
         @content
