--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,5 @@
-@main("Bar Crawl App") {
-    <div id="bar-crawl-map">
+@main("Place Crawl App") {
+    <div id="place-crawl-map">
     </div>
 
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false">
