--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,11 +1,11 @@
 html { height: 100% }
 body { height: 100%; margin: 0; padding: 0 }
 
-#bar-crawl-map {
+#place-crawl-map {
     height: 100%;
     width: 100%;
 }
 
-#bar-crawl-map img {
+#place-crawl-map img {
     max-width: inherit;
 }
